--- a/portfolio.html
+++ b/portfolio.html
@@ -63,13 +63,11 @@
             <li><button class="filtr" type="button">Marketing</button></li>
           </ul>
         </div>
-      </section>
-      <section class="section">
         <div class="container">
-          <div class="sectionimg">
           <ul class="img">
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/Technocrack.jpg"
@@ -81,10 +79,12 @@
                   <h4 class="imgname">Technocrack</h4>
                   <p class="text">Strona internetowa</p>
                 </figcaption>
+                </div>
               </figure>
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/GrafikaNewOrleanvsGoldenStars.jpg"
@@ -96,10 +96,12 @@
                   <h4 class="imgname">Grafika New Orealn vs Golden Stars</h4>
                   <p class="text">Dizajn</p>
                 </figcaption>
+                <div>
               </figure>
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/RestaurantSeafood.jpg"
@@ -111,10 +113,12 @@
                   <h4 class="imgname">Restauracja Seafood</h4>
                   <p class="text">Aplikacja</p>
                 </figcaption>
-              </figure>
+              </div>
+              </figure >
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/ProjectPrime.jpg"
@@ -126,10 +130,12 @@
                   <h4 class="imgname">Projekt Prime</h4>
                   <p class="text">Marketing</p>
                 </figcaption>
+                </div>
               </figure>
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/ProjectBoxes.jpg"
@@ -141,10 +147,12 @@
                   <h4 class="imgname">Projekt Boxes</h4>
                   <p class="text">Aplikacja</p>
                 </figcaption>
+                </div>
               </figure>
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/InspirationhasnoBorders.jpg"
@@ -156,10 +164,12 @@
                   <h4 class="imgname">Inspiration has no Borders</h4>
                   <p class="text">Strona internetowa</p>
                 </figcaption>
+                </div>
               </figure>
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/MagazynLimitedEdition.jpg"
@@ -171,10 +181,12 @@
                   <h4 class="imgname">Magazyn Limited Edition</h4>
                   <p class="text">Dizajn</p>
                 </figcaption>
+                </div>
               </figure>
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/ProjectLAB.jpg"
@@ -186,10 +198,12 @@
                   <h4 class="imgname">Projekt LAB</h4>
                   <p class="text">Marketing</p>
                 </figcaption>
+                </div>
               </figure>
             </li>
             <li class="portfolioimg">
-              <figure>
+              <figure class="fit">
+                <div class="ip">
                 <img
                   class="pi"
                   src="images/GrowingBusiness.jpg"
@@ -201,6 +215,7 @@
                   <h4 class="imgname">Growing Business</h4>
                   <p class="text">Aplikacja</p>
                 </figcaption>
+                </div>
               </figure>
             </li>
           </ul>
