--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
           <a class="name" href="index.html"><span class="web-color">Web</span>Studio</a>
           <nav>
             <ul class="menu">
-              <li><a class="item" href="https://webstudioagencja.com">Agencja</a></li>
-              <li><a class="item" href="portfolio.html">Portfolio</a></li>
-              <li><a class="item" href="https://webstudiokontakt.com">Kontakt</a></li>
+              <li><a class="unactive" href="index.html">Agencja</a></li>
+              <li><a class="header-portfolio" href="portfolio.html">Portfolio</a></li>
+              <li><a class="header-kontakt" href="index.html">Kontakt</a></li>
             </ul>
           </nav>
           <ul class="headercontact">
@@ -66,15 +66,17 @@
         <div class="container">
           <ul class="img">
             <li class="portfolioimg">
+              
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/Technocrack.jpg"
                   alt="Technocrack"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Technocrack</h4>
                   <p class="text">Strona internetowa</p>
@@ -85,13 +87,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/GrafikaNewOrleanvsGoldenStars.jpg"
                   alt="Grafika New Orealn vs Golden Star"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Grafika New Orealn vs Golden Stars</h4>
                   <p class="text">Dizajn</p>
@@ -102,13 +105,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/RestaurantSeafood.jpg"
                   alt="Restauracja Seafood"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Restauracja Seafood</h4>
                   <p class="text">Aplikacja</p>
@@ -119,13 +123,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/ProjectPrime.jpg"
                   alt="Projekt Prime"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Projekt Prime</h4>
                   <p class="text">Marketing</p>
@@ -136,13 +141,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/ProjectBoxes.jpg"
                   alt="Projekt Boxes"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Projekt Boxes</h4>
                   <p class="text">Aplikacja</p>
@@ -153,13 +159,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/InspirationhasnoBorders.jpg"
                   alt="Inspiration has no Borders"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Inspiration has no Borders</h4>
                   <p class="text">Strona internetowa</p>
@@ -170,13 +177,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/MagazynLimitedEdition.jpg"
                   alt="Magazyn Limited Edition"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Magazyn Limited Edition</h4>
                   <p class="text">Dizajn</p>
@@ -187,13 +195,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/ProjectLAB.jpg"
                   alt="Projekt LAB"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Projekt LAB</h4>
                   <p class="text">Marketing</p>
@@ -204,13 +213,14 @@
             <li class="portfolioimg">
               <figure class="fit">
                 <div class="ip">
+                  <div class="overlay-box">
                 <img
                   class="pi"
                   src="images/GrowingBusiness.jpg"
                   alt="Growing Business"
                   width="370"
                   height="294"
-                />
+                /><div class="overlay"><p class="overlay-text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
                 <figcaption>
                   <h4 class="imgname">Growing Business</h4>
                   <p class="text">Aplikacja</p>
