--- a/index.html
+++ b/index.html
@@ -519,7 +519,9 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button type="button" class="close-bnt" data-modal-close>x</button>
+      <button type="button" class="close-bnt" data-modal-close><svg class="close-button" width="30px" height="30px"><use width="11px" height="11px" x="10px" y="9px" href="">
+
+      </use></svg></button>
     </div>
     </div>
     <script src="./js/modal.js"></script>
