--- a/index.html
+++ b/index.html
@@ -519,7 +519,9 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button type="button" class="close-bnt" data-modal-close><svg class="close-button" width="30px" height="30px"><use width="11px" height="11px" x="10px" y="9px" href="./images/icons.svg/symbol-defs.svg#icon-close-black-18dp-2-1">
+      <button type="button" data-modal-close>
+        <svg width="28px" height="28px">
+          <use width="11px" height="11px" x="9px" y="9px" href="./images/icons.svg/symbol-defs.svg#icon-close-black-18dp-2-1">
 
       </use></svg></button>
     </div>
